FIX: fixes ios white screen without causing scroll jump
This is hard to test as it happens only on a live iOS device. The padding removal is to prevent a very minor scroll jump. We could bring it back later by adding this space on a different container.

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -319,7 +319,6 @@ $float-height: 530px;
   min-height: 1px;
 
   .chat-messages-scroll {
-    padding-bottom: 0.5em;
     flex-grow: 1;
     overflow-y: auto;
     overflow-y: overlay;
